<resources>
    <string name="app_name">TheMovieDbApp</string>
    <string name="action_settings">Settings</string>
    <string name="name_movie">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="trailer">Trailer</string>
    <string name="log_in">Log in</string>
    <string name="email_here">Email here</string>
    <string name="password_here">Password here</string>
    <string name="log_in_button">LOG IN</string>
    <string name="not_registered_yet">NOT REGISTERED YET ?</string>
</resources>
